Put and Delete API created
